# northern-territories-news-backend

./: .gitignore  pyproject.toml
.github/workflows/: deploy.yml
app/: __init__.py  config.py  fetcher.py  lambda_handler.py  main.py  models.py  service.py
scripts/: fetch_news.py  scrape_google_news.py
